k8s-apps/longhorn/02-metrics.yml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-manager-metrics
  namespace: longhorn-system
  labels:
    app: longhorn-manager
spec:
  selector:
    app: longhorn-manager
  ports:
    - name: metrics
      port: 9500
      targetPort: 9500
      protocol: TCP
  type: ClusterIP
